# edutest

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/edutest/: __init__.py  app.py  constants.py
tests/: conftest.py  test_basic_endpoint.py
