[metadata]
name = edutest
description = Test project for practice purposes for eductive Reims
author = Emmanuel PLUOT
license = MIT
license_file = LICENSE
platforms = unix

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Development Status :: 1 - Planning
    Intended Audience :: Developers

[flake8]
max-line-length = 160
ignore = E201, E202, E221, E251, E302, E241, E261, E722, E731, F401
